--- a/NativeScribe.csproj
+++ b/NativeScribe.csproj
@@ -81,12 +81,15 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dictionary.cs" />
     <Compile Include="DictionaryForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DictionaryForm.Designer.cs">
       <DependentUpon>DictionaryForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DictionaryItem.cs" />
+    <Compile Include="DictionaryManage.cs" />
     <Compile Include="HomeForm.cs">
       <SubType>Form</SubType>
     </Compile>
