Enhance dictionary form

--- a/NativeScribe.csproj
+++ b/NativeScribe.csproj
@@ -61,6 +61,12 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>NativeScribe.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -5651,6 +5657,7 @@
     <Content Include="Assets\Icons\64\youtube-play.png" />
     <Content Include="Assets\Icons\64\youtube-square.png" />
     <Content Include="Assets\Icons\64\youtube.png" />
+    <Content Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
